Add Vercel cron support and manual trigger endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/dist",
+  "crons": [{
+    "path": "/api/cron",
+    "schedule": "* * * * *"
+  }],
   "rewrites": [
     {
       "source": "/api/(.*)",
